# villanova-engine

./: CMakeLists.txt  README.md  player.c
include/villanova-engine/: async-queue.h  buffer.h  clock.h  codec-types.h  codec.h  colorspace.h  config.h.in  demuxer.h  engine.h  error.h  frame.h  input.h  list.h  mem.h  modules.h  output.h  queue.h  stream.h
src/: async-queue.c  buffer.c  clock.c  codec-types.c  codec.c  colorspace.c  demuxer.c  engine.c  error.c  frame.c  input.c  list.c  mem.c  modules.c  output.c  queue.c  stream.c
src/codec/: libavcodec.c
src/demux/: libavformat.c  mpeg.c
src/input/: file.c
src/output/: alsa.c  xv.c
